test/compilable/dip22d.d
/*
REQUIRED_ARGS:
TEST_OUTPUT:
---
---
*/
import imports.dip22d;
import imports.dip22e;

Foo foo;
